MDEV-14434 Wrong result for CHARSET(CONCAT(?,const))